RESOLVED FIXED220609
REGRESSION(r270961): Flipgrid can no longer capture video
https://bugs.webkit.org/show_bug.cgi?id=220609
Summary REGRESSION(r270961): Flipgrid can no longer capture video
Chris Dumez
Reported 2021-01-13 16:24:50 PST
Flipgrid can no longer capture video after r270961.
Attachments
Patch (1.94 KB, patch)
2021-01-13 16:27 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-01-13 16:25:05 PST
Chris Dumez
Comment 2 2021-01-13 16:27:14 PST
EWS
Comment 3 2021-01-13 17:38:04 PST
Committed r271477: <https://trac.webkit.org/changeset/271477> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417579 [details].
Note You need to log in before you can comment on or make changes to this bug.